--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "sort-array": "^4.1.5",
     "styled-components": "^5.3.5",
     "swapi-node": "^0.7.0",
     "web-vitals": "^2.1.4",
